force-app/main/default/objects/PricebookEntry/fields/CAMPO_1__c.field-meta.xml
<CustomField>
    <fullName>CAMPO_1__c</fullName>
    <label>CAMPO 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>