force-app/main/default/objects/PricebookEntry/fields/CAMPO_2__c.field-meta.xml
<CustomField>
    <fullName>CAMPO_2__c</fullName>
    <label>CAMPO 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>