force-app/main/default/objects/PricebookEntry/fields/CAMPO_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>CAMPO_FORMULA__c</fullName>
    <formula>CAMPO_1__c  &amp;  CAMPO_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAMPO_FORMULA</label>
    <type>Text</type>
</CustomField>